--- a/views/inventory.html
+++ b/views/inventory.html
@@ -60,6 +60,86 @@
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
       </div>
+      {{#if dataNotExists}}
+      <div class="card d-flex border-0" style="margin:auto; max-width:70rem; min-height: 20rem;">
+        <div class="row g-0" style=" margin:auto; border:none; min-height: 15rem; min-width:50rem;">
+          <div class="col-md-4  d-flex justify-content-center">
+            <img src="/source/images/defaultProfilePic.png" class="img-fluid rounded-start" style="width: auto; max-height: 20rem;">
+          </div>
+          <div class="col-md-7" style="margin:auto; margin-left: 1rem;">
+            <div class="card-body">
+              <h1 class="card-title text-center">User Not Found</h1>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container d-flex container-fluid mt-3 flex-wrap justify-content-center" style="margin:auto; width:80vw;">
+          <div class="card justify-content-center" aria-hidden="true" style="max-width: 20rem; margin:1rem;">
+            <img src="https://media.tarkett-image.com/large/TH_24567080_24594080_24596080_24601080_24563080_24565080_24588080_001.jpg" class="card-img-top img-fluid rounded-start" style="width: auto; max-height: 20rem; background-color: rgb(190, 190, 190);">
+            <div class="card-body">
+              <h5 class="card-title placeholder-glow">
+                <span class="placeholder col-6"></span>
+              </h5>
+              <p class="card-text placeholder-glow">
+                <span class="placeholder col-7"></span>
+                <span class="placeholder col-4"></span>
+                <span class="placeholder col-4"></span>
+                <span class="placeholder col-6"></span>
+                <span class="placeholder col-8"></span>
+              </p>
+              <a href="#" tabindex="-1" class="btn btn-primary disabled placeholder col-6"></a>
+            </div>
+          </div>
+          <div class="card justify-content-center" aria-hidden="true" style="max-width: 20rem; margin:1rem;">
+            <img src="https://media.tarkett-image.com/large/TH_24567080_24594080_24596080_24601080_24563080_24565080_24588080_001.jpg" class="card-img-top img-fluid rounded-start" style="width: auto; max-height: 20rem; background-color: rgb(190, 190, 190);">
+            <div class="card-body">
+              <h5 class="card-title placeholder-glow">
+                <span class="placeholder col-6"></span>
+              </h5>
+              <p class="card-text placeholder-glow">
+                <span class="placeholder col-7"></span>
+                <span class="placeholder col-4"></span>
+                <span class="placeholder col-4"></span>
+                <span class="placeholder col-6"></span>
+                <span class="placeholder col-8"></span>
+              </p>
+              <a href="#" tabindex="-1" class="btn btn-primary disabled placeholder col-6"></a>
+            </div>
+          </div>
+          <div class="card justify-content-center" aria-hidden="true" style="max-width: 20rem; margin:1rem;">
+            <img src="https://media.tarkett-image.com/large/TH_24567080_24594080_24596080_24601080_24563080_24565080_24588080_001.jpg" class="card-img-top img-fluid rounded-start" style="width: auto; max-height: 20rem; background-color: rgb(190, 190, 190);">
+            <div class="card-body">
+              <h5 class="card-title placeholder-glow">
+                <span class="placeholder col-6"></span>
+              </h5>
+              <p class="card-text placeholder-glow">
+                <span class="placeholder col-7"></span>
+                <span class="placeholder col-4"></span>
+                <span class="placeholder col-4"></span>
+                <span class="placeholder col-6"></span>
+                <span class="placeholder col-8"></span>
+              </p>
+              <a href="#" tabindex="-1" class="btn btn-primary disabled placeholder col-6"></a>
+            </div>
+          </div>
+          <div class="card justify-content-center" aria-hidden="true" style="max-width: 20rem; margin:1rem;">
+            <img src="https://media.tarkett-image.com/large/TH_24567080_24594080_24596080_24601080_24563080_24565080_24588080_001.jpg" class="card-img-top img-fluid rounded-start" style="width: auto; max-height: 20rem; background-color: rgb(190, 190, 190);">
+            <div class="card-body">
+              <h5 class="card-title placeholder-glow">
+                <span class="placeholder col-6"></span>
+              </h5>
+              <p class="card-text placeholder-glow">
+                <span class="placeholder col-7"></span>
+                <span class="placeholder col-4"></span>
+                <span class="placeholder col-4"></span>
+                <span class="placeholder col-6"></span>
+                <span class="placeholder col-8"></span>
+              </p>
+              <a href="#" tabindex="-1" class="btn btn-primary disabled placeholder col-6"></a>
+            </div>
+          </div>
+        </div>
+      {{/if}}
       {{#if dataExists}}
         <div class="card d-flex border-0" style="margin:auto; max-width:70rem; min-height: 20rem;">
           <div class="row g-0" style=" margin:auto; border:none; min-height: 15rem; min-width:50rem;">
