--- a/views/inventory.html
+++ b/views/inventory.html
@@ -9,7 +9,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;500&family=M+PLUS+1p:wght@400&family=Tajawal:wght@300;400&display=swap" rel="stylesheet">   
     <style>
-      body {font-family: 'Barlow', sans-serif;}
+      body {
+      font-family: 'Barlow', sans-serif;
+      font-size:1.4em;
+      }
       .navtext {font-weight: 500;}
     </style>
   </head>
@@ -17,11 +20,11 @@
     <nav id="navbar" class="navbar navbar-expand-lg navbar-dark sticky-top" style="background-color:rgba(0, 133, 71, 0.75)">
       <div class="container-fluid">
         <a class="navbar-brand ms-3 fs-3 navtext" style="font-family:'M PLUS 1p', sans-serif;" href="/">
-          <img id="logo" src="/source/images/mintdropLogo(PROTO).png" alt="" width="40" height="40" class="d-inline-block align-text-top">
-          Mintdrop
+          <img id="logo" src="/source/images/mintdropLogo(PROTO).png" alt="" width="8rem" class="d-inline-block align-text-top ms-3 me-3" style="min-width: 6rem;">
+          <h1 class="d-inline-block align-text-top ms-3" style="margin-top: auto; margin-bottom: auto; line-height: 6rem; font-size: 1.7em;"> Mintdrop </h1>
         </a>
-        <button class="navbar-toggler me-5" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+        <button class="navbar-toggler me-5 btn-block" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation" style="width: 5rem;">
+          <span class="navbar-toggler-icon" style="width: 3rem; height: 5rem;"></span>
         </button>
         <div class="container-fluid collapse navbar-collapse text-light justify-content-end" id="navbarNavDropdown">
           <ul class="navbar-nav">
@@ -149,16 +152,16 @@
             <div class="col-md-7" style="margin:auto; margin-left: 1rem;">
               <div class="card-body">
                 <h1 class="card-title text-center">{{username}}</h1>
-                <p class="card-text text-center">Check out {{username}}'s inventory below!</p>
+                <p class="card-text text-center">Check out {{username}}'s inventory!</p>
               </div>
             </div>
           </div>
         </div>
         {{#if itemsExist}} 
-          <div class="container d-flex container-fluid mt-3 flex-wrap justify-content-center" style="margin:auto; width:80vw;">
+          <div class="d-flex container flex-wrap mt-3 mb-5 justify-content-center" style="width:80rem; flex-basis: 80%; padding:none;">
             {{#each items}}
-            <div class="card justify-content-center" style="max-width: 20rem; margin:1rem;">
-              <img src="{{this.mediaLink}}" class="card-img-top" alt="...">
+            <div class="card justify-content-center" style="max-width: 18rem; min-width:8rem; margin:1rem;">
+              <img src="{{this.mediaLink}}" class="card-img-top" alt="..." style="max-width: 18rem; min-width:8rem;">
               <div class="card-body card shadow d-flex justify-content-center">
                 <h3 class="card-title mb-2 mt-2" style="margin:auto;">{{this.name}}</h3>
                 <h5 class="card-title mb-2 mt-2" style="margin:auto; font-size: 1.2rem; font-weight: 400;">Collection: {{this.collectionName}}</h5>
@@ -169,8 +172,8 @@
                     </button>
                   </h2>
                   <div id="flush-collapse{{this.itemID}}" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                    <p class="card-text mt-2 mb-2 text-center" style="margin:auto;">Released {{this.mintDate}}</p>
-                    <p class="card-text mt-2 mb-2 text-center" style="margin:auto;">ID: {{this.itemID}}</p>  
+                    <h4 class="card-text mt-2 mb-2 text-center" style="margin:auto; font-size: 1.1rem; font-weight: 400;">Released {{this.mintDate}}</h4>
+                    <h4 class="card-text mt-2 mb-2 text-center" style="margin:auto; font-size: 1.1rem; font-weight: 400;">ID: {{this.itemID}}</h4>  
                   </div>
                 </div>
               </div>
