--- a/views/inventory.html
+++ b/views/inventory.html
@@ -76,8 +76,8 @@
           </div>
         </div>
       </div>
-      <div class="container d-flex container-fluid mt-3 flex-wrap justify-content-center" style="margin:auto; width:80vw;">
-          <div class="card justify-content-center" aria-hidden="true" style="max-width: 20rem; margin:1rem;">
+      <div class="container d-flex container-fluid mt-3 flex-wrap justify-content-center" style="width:80rem; flex-basis: 80%; padding:none;">
+          <div class="card justify-content-center" aria-hidden="true" style="max-width: 18rem; min-width:8rem; margin:1rem;">
             <img src="https://media.tarkett-image.com/large/TH_24567080_24594080_24596080_24601080_24563080_24565080_24588080_001.jpg" class="card-img-top img-fluid rounded-start" style="width: auto; max-height: 20rem; background-color: rgb(190, 190, 190);">
             <div class="card-body">
               <h5 class="card-title placeholder-glow">
@@ -93,7 +93,7 @@
               <a href="#" tabindex="-1" class="btn btn-primary disabled placeholder col-6"></a>
             </div>
           </div>
-          <div class="card justify-content-center" aria-hidden="true" style="max-width: 20rem; margin:1rem;">
+          <div class="card justify-content-center" aria-hidden="true" style="max-width: 18rem; min-width:8rem; margin:1rem;">
             <img src="https://media.tarkett-image.com/large/TH_24567080_24594080_24596080_24601080_24563080_24565080_24588080_001.jpg" class="card-img-top img-fluid rounded-start" style="width: auto; max-height: 20rem; background-color: rgb(190, 190, 190);">
             <div class="card-body">
               <h5 class="card-title placeholder-glow">
@@ -109,7 +109,7 @@
               <a href="#" tabindex="-1" class="btn btn-primary disabled placeholder col-6"></a>
             </div>
           </div>
-          <div class="card justify-content-center" aria-hidden="true" style="max-width: 20rem; margin:1rem;">
+          <div class="card justify-content-center" aria-hidden="true" style="max-width: 18rem; min-width:8rem; margin:1rem;">
             <img src="https://media.tarkett-image.com/large/TH_24567080_24594080_24596080_24601080_24563080_24565080_24588080_001.jpg" class="card-img-top img-fluid rounded-start" style="width: auto; max-height: 20rem; background-color: rgb(190, 190, 190);">
             <div class="card-body">
               <h5 class="card-title placeholder-glow">
@@ -125,7 +125,7 @@
               <a href="#" tabindex="-1" class="btn btn-primary disabled placeholder col-6"></a>
             </div>
           </div>
-          <div class="card justify-content-center" aria-hidden="true" style="max-width: 20rem; margin:1rem;">
+          <div class="card justify-content-center" aria-hidden="true" style="max-width: 18rem; min-width:8rem; margin:1rem;">
             <img src="https://media.tarkett-image.com/large/TH_24567080_24594080_24596080_24601080_24563080_24565080_24588080_001.jpg" class="card-img-top img-fluid rounded-start" style="width: auto; max-height: 20rem; background-color: rgb(190, 190, 190);">
             <div class="card-body">
               <h5 class="card-title placeholder-glow">
