--- a/views/collection.html
+++ b/views/collection.html
@@ -67,8 +67,60 @@
         </div>
       </div>
     </nav>
-    <div class="mt-4 container-fluid ms-1 me-1" style="margin-left:5rem; margin-right:5rem;">
-      stuff goes here
+    <div class="mt-5 container-fluid ms-1 me-1" style="margin-left:5rem; margin-right:5rem;">
+      <div></div>
+      {{#if dataExists}}
+        <div class="container" style="width:80vw;">
+          <div class="card d-flex justify-content-center py-3 pt-2 border-0 border-bottom border-3">
+            <div class="text-center">
+              <img src="{{collectionInfo.photo}}" style="width:15rem; border-radius: 100%; border-style: solid; border-width: 2px;">
+            </div>
+            <h1 class="mt-3" style="text-align: center; font-style: bold;">{{collectionInfo.collectionName}} <br> by {{collectionInfo.artist}}</h1>
+            <p class="mt-4 text-center" style="padding-left:5vw; padding-right:5vw; font-size:1.2rem; line-height: 1.4em;">{{collectionInfo.description}}</p>
+            <div class="d-flex justify-content-center mt-1">
+              <div class="card d-flex justify-content-center" style="padding:none; width: 15rem;">
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item h6 text-center mb-0">Released on {{collectionInfo.releaseDate}}</li>
+                </ul>
+              </div>
+            </div>
+            <div id="links" class="mt-3 mb-3 d-flex justify-content-center align-items-center" style="display: flex; column-gap: 2rem;">
+              <a target="_blank" href="{{collectionInfo.websiteLink}}">
+                <button type="button" class="btn btn-primary py-0" style="height: 2.25rem;">Website</button>
+              </a>
+              
+            </div>
+          </div>
+          
+          <div class="d-flex container flex-wrap mt-3 mb-5 justify-content-center p-0" style="flex-basis: 80%; padding:none;">
+            {{#each itemInfo}}
+              <div class="card justify-content-center" style="max-width: 18rem; min-width:8rem; margin:1rem;">
+                <img src="{{this.mediaLink}}" class="card-img-top" alt="..." style="max-width: 18rem; min-width:8rem;">
+                <div class="card-body card shadow d-flex justify-content-center text-center">
+                  <h3 class="card-title mb-2 mt-2 " style="margin:auto;">{{this.name}}</h3>
+                  <h5 class="card-title mb-2 mt-2" style="margin:auto; font-size: 1.2rem; font-weight: 400;">Collection: {{this.collectionName}}</h5>
+                  <div class="accordion-item mt-2">
+                    <h2 class="accordion-header" id="flush-heading{{this.itemID}}">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse{{this.itemID}}" aria-expanded="false" aria-controls="flush-collapseOne">
+                        More Info
+                      </button>
+                    </h2>
+                    <div id="flush-collapse{{this.itemID}}" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                      <h4 class="card-text mt-2 mb-2 text-center" style="margin:auto; font-size: 1.1rem; font-weight: 400;">Released {{this.mintDate}}</h4>
+                      <h4 class="card-text mt-2 mb-2 text-center" style="margin:auto; font-size: 1.1rem; font-weight: 400;">ID: {{this.itemID}}</h4>  
+                    </div>
+                  </div>
+                </div>
+              </div>
+            {{/each}}
+          </div>
+        </div>
+      {{/if}}
+      {{#else}}
+      
+      {{/else}}
     </div>
   </body>
 </html>
+
+<!-- items.name, items.mediaType, items.mediaLink, items.mintDate -->
