--- a/views/collections.html
+++ b/views/collections.html
@@ -67,8 +67,33 @@
         </div>
       </div>
     </nav>
-    <div class="mt-4 container-fluid ms-1 me-1" style="margin-left:5rem; margin-right:5rem;">
-      stuff goes here
+    <div class="container" style="width:80vw;">
+      <h1 class="text-center my-4 pb-3 border-bottom border-3">Collections</h1>
+      {{#if dataExists}}
+        <div class="d-flex container flex-wrap mt-3 mb-5 justify-content-center p-0" style="flex-basis: 80%; padding:none;">
+          {{#each collectionInfo}}
+            <div class="card justify-content-center" style="width: 15rem; margin:1rem;">
+              <img src="{{this.photo}}" class="card-img-top" alt="..." style="width: 15rem;">
+              <div class="card-body card shadow d-flex justify-content-center text-center">
+                <h3 class="card-title mb-2 mt-2 " style="margin:auto; font-size: 1.7rem;">{{this.name}}</h3>
+                <h5 class="card-title mb-2 mt-2" style="margin:auto; font-size: 1.1rem; font-weight: 400;">Released {{this.releaseDate}}</h5>
+                <a href="/collections/{{this.collectionID}}" class="btn btn-primary my-2">See Full Collection</a>
+                <div class="accordion-item mt-2">
+                  <h2 class="accordion-header" id="flush-heading{{this.itemID}}">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse{{this.collectionID}}" aria-expanded="false" aria-controls="flush-collapseOne">
+                      More Info
+                    </button>
+                  </h2>
+                  <div id="flush-collapse{{this.collectionID}}" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                    <h4 class="card-text mt-2 mb-2 text-center" style="margin:auto; font-size: 1.1rem; font-weight: 400;">Artist: {{this.artist}}</h4>
+                    <h4 class="card-text mt-2 mb-2 text-center" style="margin:auto; font-size: 1.1rem; font-weight: 400;">Collection ID: {{this.collectionID}}</h4>  
+                  </div>
+                </div>
+              </div>
+            </div>
+          {{/each}}
+        </div>
+      {{/if}}
     </div>
   </body>
 </html>
