--- a/views/trades.html
+++ b/views/trades.html
@@ -15,33 +15,30 @@
       }
       .navtext {
         font-weight: 500;
+        font-size:1.3rem;
+      }
+      .droptext {
+        font-weight: 500;
+        font-size:1.1rem;
       }
     </style>
   </head>
   <body>
-    <nav id="navbar" class="navbar navbar-expand-lg navbar-dark sticky-top" style="background-color:rgba(8, 150, 115, 0.75)">
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color:rgba(8, 150, 115, 0.75)">
       <div class="container-fluid">
         <a class="navbar-brand ms-3 fs-3 navtext" style="font-family:'M PLUS 1p', sans-serif;" href="/">
           <img id="logo" src="/source/images/mintdropLogo(PROTO).png" alt="" width="8rem" class="d-inline-block align-text-top ms-3 me-3" style="min-width: 4rem;">
           <h1 class="d-inline-block align-text-top ms-3" style="margin-top: auto; margin-bottom: auto; line-height: 4rem; font-size: 1.5em;"> Mintdrop </h1>
         </a>
         <button class="navbar-toggler me-5 btn-block" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation" style="width: 5rem;">
-          <span class="navbar-toggler-icon" style="width: 3rem; height: 3rem;"></span>
+          <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="container-fluid collapse navbar-collapse text-light justify-content-center" id="navbarNavDropdown" style="max-width: fit-content; line-height: 4rem;">
-          <ul class="navbar-nav">
-            <form class="form-inline my-lg-0 d-flex align-items-center px-3" style="width: 25vw;">
-              <div class="input-group">
-                <div class="input-group-prepend">
-                  <div class="input-group-text">Search</div>
-                </div>
-                <input class="form-control mr-sm-2" type="search" placeholder="Items, collections, users">
-              </div>
-            </form>
-            <li class="nav-item px-3">
-              <a class="nav-link navtext" href="/collections" >Collections</a>
+        <div class="container-fluid collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav mr-auto mx-4">
+            <li class="nav-item mx-4">
+              <a class="nav-link navtext" href="/collections">Collections</a>
             </li>
-            <li class="nav-item dropdown px-3">
+            <li class="nav-item dropdown mx-4">
               <a class="nav-link dropdown-toggle navtext" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 About
               </a>
@@ -50,7 +47,7 @@
                 <li><a class="dropdown-item droptext" href="/about/creators">Creators</a></li>
               </ul>
             </li>
-            <li class="nav-item dropdown">
+            <li class="nav-item dropdown mx-4">
               <a class="nav-link dropdown-toggle navtext" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Account
               </a>
@@ -62,6 +59,10 @@
               </ul>
             </li>
           </ul>
+          <form class="form-inline my-2 my-lg-0 d-flex flex-nowrap" style="margin-left: auto;">
+            <input class="form-control mr-sm-2 ms-5" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
+          </form>
         </div>
       </div>
     </nav>
