improvements to cookie system

--- a/views/collection.html
+++ b/views/collection.html
@@ -85,7 +85,8 @@
             <div class="text-center">
               <img src="{{collectionInfo.photo}}" style="width:15rem; border-radius: 100%; border-style: solid; border-width: 2px;">
             </div>
-            <h1 class="mt-3" style="text-align: center; font-style: bold;">{{collectionInfo.collectionName}} <br> by {{collectionInfo.artist}}</h1>
+            <h1 class="mt-3" style="text-align: center; font-style: bold;">{{collectionInfo.collectionName}}</h1>
+            <h3 class="mb-3 text-center">by {{collectionInfo.artist}}</h3>
             <p class="mt-4 text-center" style="padding-left:5vw; padding-right:5vw; font-size:1.2rem; line-height: 1.4em;">{{collectionInfo.description}}</p>
             <div class="d-flex justify-content-center mt-1">
               <div class="card d-flex justify-content-center" style="padding:none; width: 15rem;">
