--- a/views/collection.html
+++ b/views/collection.html
@@ -70,8 +70,8 @@
             </li>
             {{/if}}
           </ul>
-          <form class="form-inline my-2 my-lg-0 d-flex flex-nowrap" style="margin-left: auto;">
-            <input class="form-control mr-sm-2 ms-5" type="search" placeholder="Search" aria-label="Search">
+          <form action="/search" method="post" class="form-inline my-2 my-lg-0 d-flex flex-nowrap" style="margin-left: auto;">
+            <input class="form-control mr-sm-2 ms-5" name="search" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
           </form>
         </div>
@@ -97,9 +97,8 @@
             </div>
             <div id="links" class="mt-3 mb-3 d-flex justify-content-center align-items-center" style="display: flex; column-gap: 2rem;">
               <a target="_blank" href="{{collectionInfo.websiteLink}}">
-                <button type="button" class="btn btn-primary py-0" style="height: 2.25rem;">Website</button>
+                <button type="button" class="btn btn-success py-0" style="height: 2.25rem;">Website</button>
               </a>
-              
             </div>
           </div>
           
@@ -110,9 +109,9 @@
                 <div class="card-body card shadow d-flex justify-content-center text-center">
                   <h3 class="card-title mb-2 mt-2 " style="margin:auto;">{{this.name}}</h3>
                   <h5 class="card-title mb-2 mt-2" style="margin:auto; font-size: 1.2rem; font-weight: 400;">Collection: {{this.collectionName}}</h5>
-                  <div class="accordion-item mt-2">
-                    <h2 class="accordion-header" id="flush-heading{{this.itemID}}">
-                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse{{this.itemID}}" aria-expanded="false" aria-controls="flush-collapseOne">
+                  <div class="accordion-item mt-2" style="margin:auto; width: 85%;">
+                    <h2 class="accordion-header text-center" id="flush-heading{{this.itemID}}">
+                      <button class="accordion-button collapsed p-2" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse{{this.itemID}}" aria-expanded="false" aria-controls="flush-collapseOne">
                         More Info
                       </button>
                     </h2>
