--- a/views/collections.html
+++ b/views/collections.html
@@ -70,8 +70,8 @@
             </li>
             {{/if}}
           </ul>
-          <form class="form-inline my-2 my-lg-0 d-flex flex-nowrap" style="margin-left: auto;">
-            <input class="form-control mr-sm-2 ms-5" type="search" placeholder="Search" aria-label="Search">
+          <form action="/search" method="post" class="form-inline my-2 my-lg-0 d-flex flex-nowrap" style="margin-left: auto;">
+            <input class="form-control mr-sm-2 ms-5" name="search" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
           </form>
         </div>
@@ -86,19 +86,9 @@
               <img src="{{this.photo}}" class="card-img-top" alt="..." style="width: 15rem;">
               <div class="card-body card shadow d-flex justify-content-center text-center">
                 <h3 class="card-title mb-2 mt-2 " style="margin:auto; font-size: 1.7rem;">{{this.name}}</h3>
-                <h5 class="card-title mb-2 mt-2" style="margin:auto; font-size: 1.1rem; font-weight: 400;">Released {{this.releaseDate}}</h5>
-                <a href="/collections/{{this.collectionID}}" class="btn btn-primary my-2">See Full Collection</a>
-                <div class="accordion-item mt-2">
-                  <h2 class="accordion-header" id="flush-heading{{this.itemID}}">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse{{this.collectionID}}" aria-expanded="false" aria-controls="flush-collapseOne">
-                      More Info
-                    </button>
-                  </h2>
-                  <div id="flush-collapse{{this.collectionID}}" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                    <h4 class="card-text mt-2 mb-2 text-center" style="margin:auto; font-size: 1.1rem; font-weight: 400;">Artist: {{this.artist}}</h4>
-                    <h4 class="card-text mt-2 mb-2 text-center" style="margin:auto; font-size: 1.1rem; font-weight: 400;">Collection ID: {{this.collectionID}}</h4>  
-                  </div>
-                </div>
+                <h4 class="card-text mt-4 text-center" style="margin:auto; font-size: 1.1rem; font-weight: 400;">Artist: {{this.artist}}</h4>
+                <h5 class="card-title mb-1 mt-2" style="margin:auto; font-size: 1.1rem; font-weight: 400;">Released {{this.releaseDate}}</h5>
+                <a href="/collections/{{this.collectionID}}" class="btn btn-success mt-2 mb-2" style="margin:auto; width: 85%;">See Full Collection</a>
               </div>
             </div>
           {{/each}}
