--- a/views/inventory.html
+++ b/views/inventory.html
@@ -70,21 +70,14 @@
             </li>
             {{/if}}
           </ul>
-          <form class="form-inline my-2 my-lg-0 d-flex flex-nowrap" style="margin-left: auto;">
-            <input class="form-control mr-sm-2 ms-5" type="search" placeholder="Search" aria-label="Search">
+          <form action="/search" method="post" class="form-inline my-2 my-lg-0 d-flex flex-nowrap" style="margin-left: auto;">
+            <input class="form-control mr-sm-2 ms-5" name="search" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
           </form>
         </div>
       </div>
     </nav>
-    <div class="mt-4" style="margin-left:3rem; margin-right:3rem;">
-      <div class="container-fluid mt-5 mb-3" style="max-width:70rem;">
-        <form class="d-flex" action="/inventory" method="post">
-          <h5 style="width:7rem; margin:auto;">Find User</h3>
-          <input class="form-control ms-3 me-3" type="search" name="username" placeholder="@username" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
-      </div>
+    <h1 class="text-center my-4 pb-3 border-bottom border-3">Inventory</h1>
       {{#if dataNotExists}}
       <div class="card d-flex border-0" style="margin:auto; max-width:70rem; min-height: 20rem;">
         <div class="row g-0" style=" margin:auto; border:none; min-height: 15rem; min-width:50rem;">
@@ -112,7 +105,7 @@
                 <span class="placeholder col-6"></span>
                 <span class="placeholder col-8"></span>
               </p>
-              <a href="#" tabindex="-1" class="btn btn-primary disabled placeholder col-6"></a>
+              <a href="#" tabindex="-1" class="btn btn-success disabled placeholder col-6"></a>
             </div>
           </div>
           <div class="card justify-content-center" aria-hidden="true" style="max-width: 18rem; min-width:8rem; margin:1rem;">
@@ -128,7 +121,7 @@
                 <span class="placeholder col-6"></span>
                 <span class="placeholder col-8"></span>
               </p>
-              <a href="#" tabindex="-1" class="btn btn-primary disabled placeholder col-6"></a>
+              <a href="#" tabindex="-1" class="btn btn-success disabled placeholder col-6"></a>
             </div>
           </div>
           <div class="card justify-content-center" aria-hidden="true" style="max-width: 18rem; min-width:8rem; margin:1rem;">
@@ -144,7 +137,7 @@
                 <span class="placeholder col-6"></span>
                 <span class="placeholder col-8"></span>
               </p>
-              <a href="#" tabindex="-1" class="btn btn-primary disabled placeholder col-6"></a>
+              <a href="#" tabindex="-1" class="btn btn-success disabled placeholder col-6"></a>
             </div>
           </div>
           <div class="card justify-content-center" aria-hidden="true" style="max-width: 18rem; min-width:8rem; margin:1rem;">
@@ -160,7 +153,7 @@
                 <span class="placeholder col-6"></span>
                 <span class="placeholder col-8"></span>
               </p>
-              <a href="#" tabindex="-1" class="btn btn-primary disabled placeholder col-6"></a>
+              <a href="#" tabindex="-1" class="btn btn-success disabled placeholder col-6"></a>
             </div>
           </div>
         </div>
@@ -185,11 +178,11 @@
             <div class="card justify-content-center" style="max-width: 18rem; min-width:8rem; margin:1rem;">
               <img src="{{this.mediaLink}}" class="card-img-top" alt="..." style="max-width: 18rem; min-width:8rem;">
               <div class="card-body card shadow d-flex justify-content-center">
-                <h3 class="card-title mb-2 mt-2" style="margin:auto;">{{this.name}}</h3>
+                <h3 class="card-title mb-2 mt-2 text-center" style="margin:auto;">{{this.name}}</h3>
                 <h5 class="card-title mb-2 mt-2" style="margin:auto; font-size: 1.2rem; font-weight: 400;">Collection: {{this.collectionName}}</h5>
-                <div class="accordion-item mt-2">
-                  <h2 class="accordion-header" id="flush-heading{{this.itemID}}">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse{{this.itemID}}" aria-expanded="false" aria-controls="flush-collapseOne">
+                <div class="accordion-item mt-2" style="margin:auto; width: 85%;">
+                  <h2 class="accordion-header text-center" id="flush-heading{{this.itemID}}">
+                    <button class="accordion-button collapsed p-2" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse{{this.itemID}}" aria-expanded="false" aria-controls="flush-collapseOne">
                       More Info
                     </button>
                   </h2>
