--- a/views/tradesOG.html
+++ b/views/tradesOG.html
@@ -70,8 +70,8 @@
             </li>
             {{/if}}
           </ul>
-          <form class="form-inline my-2 my-lg-0 d-flex flex-nowrap" style="margin-left: auto;">
-            <input class="form-control mr-sm-2 ms-5" type="search" placeholder="Search" aria-label="Search">
+          <form action="/search" method="post" class="form-inline my-2 my-lg-0 d-flex flex-nowrap" style="margin-left: auto;">
+            <input class="form-control mr-sm-2 ms-5" name="search" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
           </form>
         </div>
