--- a/views/trade_inventory2.html
+++ b/views/trade_inventory2.html
@@ -146,29 +146,29 @@
           </div>
         </div>
       {{/if}}
-      {{#if dataExists}}
-        <div class="card d-flex border-0 bg-lb" style="margin:auto; max-width:70rem; min-height: 20rem;">
-          <div class="row g-0" style=" margin:auto; border:none; min-height: 15rem; min-width:50rem;">
-            <div class="col-md-4  d-flex justify-content-center">
-              <img src="{{profilePhoto}}" class="img-fluid rounded-start" style="width: auto; max-height: 20rem;">
-            </div>
-            <div class="col-md-7" style="margin:auto; margin-left: 1rem;">
-              <div class="card-body">
-                <h1 class="card-title text-center">{{searchUsername}}</h1>
-                <p class="card-text text-center">Check out {{searchUsername}}'s inventory!</p>
-              </div>
-            </div>
+      {{#if itemsExist}}
+      <div class="container px-1" style="width:80vw;">
+        <div class="card d-flex justify-content-center py-3 pt-2 border-0 border-bottom border-3 bg-lb">
+          <div class="text-center">
+            <img src="{{items.0.profilePhoto}}" style="width:17rem; border-radius: 100%;">
           </div>
+          <h1 class="mt-3" style="text-align: center; font-style: bold;">{{items.0.username}}</h1>
+          <p class="mt-1 text-center" style="padding-left:5vw; padding-right:5vw; font-size:1.2rem; line-height: 1.4em;">{{collectionInfo.description}}</p>
         </div>
         {{#if itemsExist}} 
-          <div class="d-flex container flex-wrap mt-3 mb-5 justify-content-center" style="width:80rem; flex-basis: 80%; padding:none;">
+          <div class="d-flex container flex-wrap mt-3 mb-5 justify-content-center" style="width:78vw; flex-basis: 80%; padding:none; margin-left:auto; margin-right:auto;">
             {{#each items}}
-            <div class="card justify-content-center" style="max-width: 18rem; min-width:8rem; margin:1rem;">
+            <div class="card justify-content-center" style="max-width: 18rem; min-width:8rem; margin:1vw;">
               <img src="{{this.mediaLink}}" class="card-img-top" alt="..." style="max-width: 18rem; min-width:8rem;">
               <div class="card-body card shadow d-flex justify-content-center">
                 <h3 class="card-title mb-2 mt-2 text-center" style="margin:auto;">{{this.name}}</h3>
                 <h5 class="card-title mb-2 mt-2" style="margin:auto; font-size: 1.2rem; font-weight: 400;">Collection: {{this.collectionName}}</h5>
-                <div class="accordion-item mt-2" style="margin:auto; width: 85%;">
+                <div class="d-flex justify-content-center" id="links{{this.itemID}}">
+                    <a href="./{{this.username}}/{{this.itemID}}">
+                        <button type="button" class="btn btn-outline-success py-0" style="height: 2.25rem;">Trade for your {{this.name}}</button>
+                    </a>
+                </div>
+                <!-- <div class="accordion-item mt-2" style="margin:auto; width: 85%;">
                   <h2 class="accordion-header text-center" id="flush-heading{{this.itemID}}">
                     <button class="accordion-button collapsed p-2" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse{{this.itemID}}" aria-expanded="false" aria-controls="flush-collapseOne">
                       More Info
@@ -178,7 +178,7 @@
                     <h4 class="card-text mt-2 mb-2 text-center" style="margin:auto; font-size: 1.1rem; font-weight: 400;">Released {{this.mintDate}}</h4>
                     <h4 class="card-text mt-2 mb-2 text-center" style="margin:auto; font-size: 1.1rem; font-weight: 400;">ID: {{this.itemID}}</h4>  
                   </div>
-                </div>
+                </div> -->
               </div>
             </div>
             {{/each}}
@@ -188,5 +188,3 @@
     </div>
   </body>
 </html>
-
-<!-- items.name, items.mediaType, items.mediaLink, items.mintDate -->
