new trading system is functional

--- a/views/trade_inventory2.html
+++ b/views/trade_inventory2.html
@@ -164,7 +164,7 @@
                 <h3 class="card-title mb-2 mt-2 text-center" style="margin:auto;">{{this.name}}</h3>
                 <h5 class="card-title mb-2 mt-2" style="margin:auto; font-size: 1.2rem; font-weight: 400;">Collection: {{this.collectionName}}</h5>
                 <div class="d-flex justify-content-center" id="links{{this.itemID}}">
-                    <a href="./{{this.username}}/{{this.itemID}}">
+                    <a href="{{this.url}}">
                         <button type="button" class="btn btn-outline-success py-0" style="height: 2.25rem;">Trade for your {{this.name}}</button>
                     </a>
                 </div>
