--- a/views/search.html
+++ b/views/search.html
@@ -56,6 +56,7 @@
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <li><a class="dropdown-item droptext" href="/trades">Trades</a></li>
                 <li><a class="dropdown-item droptext" href="/inventory">Inventory</a></li>
+                <li><a class="dropdown-item droptext" href="/profile">Profile</a></li>
                 <li><a class="dropdown-item droptext" href="/logout">Logout</a></li>
               </ul>
             </li>
