--- a/views/tradesNEW.html
+++ b/views/tradesNEW.html
@@ -43,6 +43,7 @@
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <li><a class="dropdown-item droptext" href="/trades">Trades</a></li>
                 <li><a class="dropdown-item droptext" href="/inventory">Inventory</a></li>
+                <li><a class="dropdown-item droptext" href="/profile">Profile</a></li>
                 <li><a class="dropdown-item droptext" href="/logout">Logout</a></li>
               </ul>
             </li>
@@ -68,35 +69,12 @@
     <div class="mt-4 container-fluid ms-1 me-1" style="margin-left:3rem; margin-right:3rem;">
       <ul class="nav nav-tabs" id="myTab" role="tablist">
         <li class="nav-item" role="presentation">
-          <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">Send Trades</button>
-        </li>
-        <li class="nav-item" role="presentation">
-          <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false">Inbox</button>
+          <button class="nav-link active" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false">Inbox</button>
         </li>
         <li class="nav-item" role="presentation">
           <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact" type="button" role="tab" aria-controls="contact" aria-selected="false">History</button>
         </li>
       </ul>
-      <div class="tab-content" id="myTabContent">
-        <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-          <form action="/trades/send" method="post" style="margin-left: 10vw; margin-right: 10vw;">
-            <h2 class="text-center mt-5">Send Trade</h2>
-            <div class="mt-3">
-              <label for="sendItemID" class="form-label">Your Item's ID#</label>
-              <input type="text" name="sendItemID" placeholder="HZ4x2fQ96uSKcSoB" class="form-control" aria-describedby="passwordHelpBlock">  
-            </div>
-            <div class="mt-3">
-              <label for="receiveUserUsername" class="form-label">To User</label>
-              <input type="text" name="receiveUserUsername" placeholder="@username" class="form-control" aria-describedby="passwordHelpBlock">  
-            </div>
-            <div class="mt-3">
-              <label for="receiveItemID" class="form-label">For Item ID#</label>
-              <input type="text" name="receiveItemID" placeholder="VSvse1IP5oy5ay8p" class="form-control" aria-describedby="passwordHelpBlock">  
-            </div>
-            <button type="submit" value="Submit" class="btn btn-outline-success mt-3">Send Trade</button>
-          </form>
-        </div>
-        <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
           {{#if tradesExists}}
             {{#each tradeData}}
               <div class="container-fluid d-flex flex-start justify-content-center">
